--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"homepage": "https://github.com/ejc-tsds/dictionary#readme",
 	"dependencies": {
-		"@ejc-tsds/arraylist": "latest"
+		"@ejc-tsds/arraylist": "0.0.2"
 	},
 	"devDependencies": {
 		"@types/node": "latest",
